--- a/package.json
+++ b/package.json
@@ -8,16 +8,13 @@
   "bugs": {
     "url": "https://github.com/creativetimofficial/material-dashboard-react/issues"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/creativetimofficial/material-dashboard-react.git"
-  },
   "dependencies": {
     "@emotion/cache": "11.10.8",
     "@emotion/react": "11.10.8",
     "@emotion/styled": "11.10.8",
     "@mui/icons-material": "5.11.16",
     "@mui/material": "5.12.3",
+    "@mui/x-data-grid": "^7.12.0",
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
     "prop-types": "15.8.1",
@@ -25,11 +22,11 @@
     "react-chartjs-2": "5.2.0",
     "react-dom": "18.2.0",
     "react-github-btn": "1.4.0",
-    "react-router-dom": "6.11.0",
+    "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
     "react-table": "7.8.0",
     "stylis": "4.1.4",
-    "stylis-plugin-rtl": "2.1.1",
+    "stylis-plugin-rtl": "^2.0.2",
     "yup": "1.1.1"
   },
   "scripts": {
